[gd_scene load_steps=20 format=3 uid="uid://tutorial_level_001"]

[ext_resource type="PackedScene" uid="uid://player_scene_001" path="res://scenes/player/Player.tscn" id="1_player"]
[ext_resource type="Script" path="res://scripts/world/TutorialLevel.gd" id="2_script"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_sky"]
sky_top_color = Color(0.05, 0.08, 0.15, 1)
sky_horizon_color = Color(0.1, 0.15, 0.25, 1)
ground_bottom_color = Color(0.02, 0.03, 0.05, 1)
ground_horizon_color = Color(0.05, 0.08, 0.12, 1)

[sub_resource type="Sky" id="Sky_main"]
sky_material = SubResource("ProceduralSkyMaterial_sky")

[sub_resource type="Environment" id="Environment_main"]
background_mode = 2
sky = SubResource("Sky_main")
ambient_light_source = 2
ambient_light_color = Color(0.15, 0.2, 0.3, 1)
ambient_light_energy = 0.5
fog_enabled = true
fog_light_color = Color(0.1, 0.15, 0.2, 1)
fog_density = 0.01
volumetric_fog_enabled = true
volumetric_fog_density = 0.02
volumetric_fog_albedo = Color(0.1, 0.15, 0.2, 1)

[sub_resource type="BoxMesh" id="BoxMesh_ground"]
size = Vector3(60, 1, 60)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ground"]
albedo_color = Color(0.08, 0.1, 0.12, 1)
metallic = 0.2
roughness = 0.8

[sub_resource type="BoxShape3D" id="BoxShape3D_ground"]
size = Vector3(60, 1, 60)

[sub_resource type="BoxMesh" id="BoxMesh_wall"]
size = Vector3(20, 4, 0.5)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_wall"]
albedo_color = Color(0.1, 0.12, 0.15, 1)
metallic = 0.3
roughness = 0.7

[sub_resource type="BoxMesh" id="BoxMesh_building"]
size = Vector3(8, 12, 8)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_building"]
albedo_color = Color(0.06, 0.08, 0.1, 1)
metallic = 0.5
roughness = 0.6
emission_enabled = true
emission = Color(0, 0.3, 0.4, 1)
emission_energy_multiplier = 0.5

[sub_resource type="BoxMesh" id="BoxMesh_platform"]
size = Vector3(6, 0.3, 6)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_platform"]
albedo_color = Color(0.12, 0.15, 0.18, 1)
metallic = 0.6
roughness = 0.4

[sub_resource type="CylinderMesh" id="CylinderMesh_pillar"]
top_radius = 0.3
bottom_radius = 0.4
height = 6.0

[sub_resource type="SphereMesh" id="SphereMesh_pickup"]
radius = 0.3
height = 0.6

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_pickup"]
albedo_color = Color(0, 1, 1, 1)
emission_enabled = true
emission = Color(0, 0.8, 0.8, 1)
emission_energy_multiplier = 2.0

[sub_resource type="NavigationMesh" id="NavigationMesh_main"]
vertices = PackedVector3Array(-30, 0.5, -30, -30, 0.5, 30, 30, 0.5, 30, 30, 0.5, -30)
polygons = [PackedInt32Array(0, 1, 2, 3)]

[node name="TutorialLevel" type="Node3D"]
script = ExtResource("2_script")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_main")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.866, -0.433, 0.25, 0, 0.5, 0.866, -0.5, -0.75, 0.433, 10, 20, 10)
light_color = Color(0.7, 0.8, 0.9, 1)
light_energy = 0.8
shadow_enabled = true

[node name="Ground" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Ground"]
mesh = SubResource("BoxMesh_ground")
surface_material_override/0 = SubResource("StandardMaterial3D_ground")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Ground"]
shape = SubResource("BoxShape3D_ground")

[node name="NavigationRegion3D" type="NavigationRegion3D" parent="."]
navigation_mesh = SubResource("NavigationMesh_main")

[node name="SpawnPoint" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)

[node name="Player" parent="." instance=ExtResource("1_player")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)

[node name="TutorialZones" type="Node3D" parent="."]

[node name="Zone1_Movement" type="Area3D" parent="TutorialZones"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 10)

[node name="CollisionShape3D" type="CollisionShape3D" parent="TutorialZones/Zone1_Movement"]
shape = SubResource("BoxShape3D_ground")

[node name="Marker" type="MeshInstance3D" parent="TutorialZones/Zone1_Movement"]
mesh = SubResource("SphereMesh_pickup")
surface_material_override/0 = SubResource("StandardMaterial3D_pickup")

[node name="Zone2_Combat" type="Area3D" parent="TutorialZones"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 15, 1, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="TutorialZones/Zone2_Combat"]
shape = SubResource("BoxShape3D_ground")

[node name="Marker" type="MeshInstance3D" parent="TutorialZones/Zone2_Combat"]
mesh = SubResource("SphereMesh_pickup")
surface_material_override/0 = SubResource("StandardMaterial3D_pickup")

[node name="Zone3_Dash" type="Area3D" parent="TutorialZones"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -15, 1, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="TutorialZones/Zone3_Dash"]
shape = SubResource("BoxShape3D_ground")

[node name="Marker" type="MeshInstance3D" parent="TutorialZones/Zone3_Dash"]
mesh = SubResource("SphereMesh_pickup")
surface_material_override/0 = SubResource("StandardMaterial3D_pickup")

[node name="Zone4_Interact" type="Area3D" parent="TutorialZones"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -15)

[node name="CollisionShape3D" type="CollisionShape3D" parent="TutorialZones/Zone4_Interact"]
shape = SubResource("BoxShape3D_ground")

[node name="Marker" type="MeshInstance3D" parent="TutorialZones/Zone4_Interact"]
mesh = SubResource("SphereMesh_pickup")
surface_material_override/0 = SubResource("StandardMaterial3D_pickup")

[node name="Buildings" type="Node3D" parent="."]

[node name="Building1" type="StaticBody3D" parent="Buildings"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 20, 6, 20)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Buildings/Building1"]
mesh = SubResource("BoxMesh_building")
surface_material_override/0 = SubResource("StandardMaterial3D_building")

[node name="NeonLight" type="OmniLight3D" parent="Buildings/Building1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -4, 4.5)
light_color = Color(0, 0.8, 0.8, 1)
light_energy = 2.0
omni_range = 8.0

[node name="Building2" type="StaticBody3D" parent="Buildings"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -20, 6, -20)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Buildings/Building2"]
mesh = SubResource("BoxMesh_building")
surface_material_override/0 = SubResource("StandardMaterial3D_building")

[node name="NeonLight" type="OmniLight3D" parent="Buildings/Building2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -4, 4.5)
light_color = Color(1, 0, 0.5, 1)
light_energy = 2.0
omni_range = 8.0

[node name="Building3" type="StaticBody3D" parent="Buildings"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -20, 6, 20)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Buildings/Building3"]
mesh = SubResource("BoxMesh_building")
surface_material_override/0 = SubResource("StandardMaterial3D_building")

[node name="NeonLight" type="OmniLight3D" parent="Buildings/Building3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -4, 4.5)
light_color = Color(1, 0.5, 0, 1)
light_energy = 2.0
omni_range = 8.0

[node name="Walls" type="Node3D" parent="."]

[node name="WallNorth" type="StaticBody3D" parent="Walls"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, -30)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Walls/WallNorth"]
mesh = SubResource("BoxMesh_wall")
surface_material_override/0 = SubResource("StandardMaterial3D_wall")

[node name="WallSouth" type="StaticBody3D" parent="Walls"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 30)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Walls/WallSouth"]
mesh = SubResource("BoxMesh_wall")
surface_material_override/0 = SubResource("StandardMaterial3D_wall")

[node name="WallEast" type="StaticBody3D" parent="Walls"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 30, 2, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Walls/WallEast"]
mesh = SubResource("BoxMesh_wall")
surface_material_override/0 = SubResource("StandardMaterial3D_wall")

[node name="WallWest" type="StaticBody3D" parent="Walls"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -30, 2, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Walls/WallWest"]
mesh = SubResource("BoxMesh_wall")
surface_material_override/0 = SubResource("StandardMaterial3D_wall")

[node name="Pillars" type="Node3D" parent="."]

[node name="Pillar1" type="StaticBody3D" parent="Pillars"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10, 3, 10)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Pillars/Pillar1"]
mesh = SubResource("CylinderMesh_pillar")
surface_material_override/0 = SubResource("StandardMaterial3D_wall")

[node name="Light" type="OmniLight3D" parent="Pillars/Pillar1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 0)
light_color = Color(0, 1, 1, 1)
light_energy = 1.5
omni_range = 5.0

[node name="Pillar2" type="StaticBody3D" parent="Pillars"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -10, 3, -10)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Pillars/Pillar2"]
mesh = SubResource("CylinderMesh_pillar")
surface_material_override/0 = SubResource("StandardMaterial3D_wall")

[node name="Light" type="OmniLight3D" parent="Pillars/Pillar2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 0)
light_color = Color(1, 0, 0.5, 1)
light_energy = 1.5
omni_range = 5.0

[node name="Platforms" type="Node3D" parent="."]

[node name="Platform1" type="StaticBody3D" parent="Platforms"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8, 0.15, -8)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Platforms/Platform1"]
mesh = SubResource("BoxMesh_platform")
surface_material_override/0 = SubResource("StandardMaterial3D_platform")

[node name="Platform2" type="StaticBody3D" parent="Platforms"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8, 0.15, 8)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Platforms/Platform2"]
mesh = SubResource("BoxMesh_platform")
surface_material_override/0 = SubResource("StandardMaterial3D_platform")

[node name="EnemySpawns" type="Node3D" parent="."]

[node name="Spawn1" type="Node3D" parent="EnemySpawns"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 15, 1, 5)

[node name="Spawn2" type="Node3D" parent="EnemySpawns"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 15, 1, -5)

[node name="Spawn3" type="Node3D" parent="EnemySpawns"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 18, 1, 0)

[node name="PickupSpawns" type="Node3D" parent="."]

[node name="HealthPickup" type="Node3D" parent="PickupSpawns"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -10, 1, 5)

[node name="AmmoPickup" type="Node3D" parent="PickupSpawns"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 1, -10)

[node name="InteractableTerminal" type="StaticBody3D" parent="." groups=["interactable"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -15)

[node name="MeshInstance3D" type="MeshInstance3D" parent="InteractableTerminal"]
mesh = SubResource("BoxMesh_platform")
surface_material_override/0 = SubResource("StandardMaterial3D_building")

[node name="Screen" type="OmniLight3D" parent="InteractableTerminal"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
light_color = Color(0, 1, 0.5, 1)
light_energy = 2.0
omni_range = 3.0
